# Stellar-forge

./: .gitignore  .lintstagedrc.js  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
contracts/: Cargo.toml
contracts/.cargo/: audit.toml
contracts/token-factory/: Cargo.toml
contracts/token-factory/bench_snapshots/: baseline.json
contracts/token-factory/fuzz/: .gitignore  Cargo.toml
contracts/token-factory/fuzz/fuzz_targets/: fuzz_create_token.rs  fuzz_fee_arithmetic.rs  fuzz_mint_tokens.rs  fuzz_set_metadata.rs
contracts/token-factory/fuzz/scripts/: generate_seeds.mjs
contracts/token-factory/src/: bench.rs  lib.rs  test.rs
contracts/token-factory/test_snapshots/bench/: bench_fee_split_at_max_within_limits.1.json  bench_fee_split_mint_1.1.json  bench_fee_split_mint_10.1.json  bench_fee_split_mint_15.1.json  bench_fee_split_mint_5.1.json
contracts/token-factory/test_snapshots/test/: test_add_to_whitelist_succeeds_and_persists.1.json  test_admin_can_pause_and_unpause.1.json  test_backfill_capped_supply_allows_headroom_mint.1.json  test_backfill_capped_supply_cannot_be_applied_twice.1.json  test_backfill_capped_supply_rejects_token_without_cap.1.json  test_backfill_capped_supply_rejects_value_above_cap.1.json  test_backfill_capped_supply_seeds_untracked_cap.1.json  test_backfill_capped_supply_unauthorized.1.json  test_batch_blocked_when_not_whitelisted.1.json  test_batch_blocked_when_paused.1.json  test_batch_insufficient_fee_rejected.1.json  test_batch_invalid_name_rejects_entire_batch.1.json  test_burn.1.json  (+114 more)
(+95 files in other folders)
